# blooDot

./: .gitignore  Build.cmd  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  Package.appxmanifest  PhysicsDebugDraw.cpp  README.md  blooDot.1.bofa  blooDot.ligma  blooDot.rc  blooDot.sln  blooDot.vcxproj  blooDot.vcxproj.filters  blueDot.sln  boydsa.cpp  boydsa.h  chunk-constants.h  chunk-sizes.h  clumsypack.h  collision.cpp  collision.h  constants.h  controller-stuff.cpp  controller-stuff.h  cpp.hint  datetime.cpp  datetime.h  dexassy.cpp  dexassy.h  dialogcontrols.cpp  dialogcontrols.h  ding.cpp  ding.h  ding.hc  dingsheet.cpp  dingsheet.h  drawing.cpp  (+109 more)
.github/: FUNDING.yml
.github/workflows/: ArtifactBuild.cmd  Build.cmd  ccpp.yml
.run/: blooDot.run.xml  xassy.run.xml
Debug/blueDot/: AppxManifest.xml  BasicPixelShader.cso  BasicVertexShader.cso  blueDot.build.appxrecipe  blueDot.winmd  resources.pri
Game/: bloo.docx  clumsypack.xlsm  tileconfigurations.bas
Game/Artwork/: 2235238f-f80e-4341-a53f-5a390269126e.jfif
Game/Docs/: leveleditor.txt
Game/Maps/: GoLRecording1.bloodot  J1Dungeon.bloodot  W1L1.bloodot  W1L2.bloodot  levelmaps.txt
Game/Mobs/: Player_1-Walking1.xcf  Player_1-Walking2.xcf  Player_1.xcf
Media/Legacy/: NEPOMUK2.BAS  TIMER15.DA2  TIMER16.DA4  TIMER17.DA1  TIMER17.DA2  TIMER19.DA1  TIMER21.DA1  TIMER22.DA1  TIMER25.DA1  TIMER26.DA1  TIMER27.DA1  TIMER28.DA1  TIMER29.DA1  TIMER30.DA1  TIMER30.DA2  TIMER35.DA1  TIMER37.DA1
Media/Levels/: grassmere.bloodot
Media/Scenes/: element-cube.pov
SDL/include/: SDL_locale.h
Shared/: App.cpp  App.h  Audio.cpp  Audio.h  BasicLoader.cpp  BasicMath.h  BasicPixelShader.hlsl  BasicReaderWriter.cpp  BasicReaderWriter.h  BasicShapes.cpp  BasicShapes.h  DeviceResources.cpp  LoadScreen.cpp  LoadScreen.h  MediaStreamer.cpp  PersistentState.cpp  SampleOverlay.cpp  SampleOverlay.h  blueDot.cpp  blueDot.h
blooDot/: Package.appxmanifest  README.md  blueDot.vcxproj  blueDot.vcxproj.filters  blueDot_TemporaryKey.pfx
blooDot.test/: Package.appxmanifest  UnitTest.cpp  UnitTestApp.xaml  UnitTestApp.xaml.cpp  UnitTestApp.xaml.h  blooDot.test.vcxproj  blooDot.test.vcxproj.filters
continuousIntegration/: continuousIntegration.vcxproj
enc_temp_folder/c9616aaabf4ff9563445898f877d56/: blooDot.cpp
legalese/: clearsans.txt  ofl.txt  polypartition-license.txt
moosic/: delay-filter.cpp  delay-filter.h  delay-line.cpp  delay-line.h  derivative.cpp  derivative.h  envelope-source.cpp  envelope-source.h  flame-source.cpp  flame-source.h  frame.cpp  frame.h  nose-gate.cpp  nose-gate.h  oscillator-base.cpp  oscillator-base.h  oscillator-exception.h  oscillator.cpp  oscillator.h  pch.h  pipe.cpp  pipe.h  rampen-sau.cpp  rampen-sau.h  random-noise.cpp  random-noise.h  string-shaper.cpp  string-shaper.h  synth.h
planning/: boxchars.txt  creatormode.ligma  dramatis-personae.ligma  flap-calculations.xlsx  gameplay.ligma  gfx.ligma  map-dimensioning.xlsx  menus.ligma  menus.txt  players.ligma  quests.ligma  scraps.ligma  sfx.ligma  shavian.docx  sidequests.ligma  worldbuilding.ligma
platform/: Package.appxmanifest  blooDot.vcxproj  blooDot.vcxproj.filters  blooDot_TemporaryKey.pfx
res/: chunk-constants.h  chunk-sizes.h  convo.1.bml  fragment.glsl  gameres.xassy.recipe  gameres.xlation.recipe  worldbuilding.ligma  xassy.cmd  xassy.cooked1.ngld  xlations-de.h  xlations-en.h  xlations-fi.h  xlations-ua.h  xlations.cpp  xlations.h
res/ding/: dingdescriptions.1.bml  snurch-snavior-collision.csv
res/shaders/: lifecurtain-fragment.glsl  rain-fragment.glsl  rain-vertex.glsl  retro-fragment.glsl  retro-vertex.glsl  vortex-fragment.glsl
res/ui/: manufacturer.dlg
src/: BasicVertexShader.hlsl  PreCompiledHeaders.cpp  PreCompiledHeaders.h  shared-constants.h
src/algo/: BitmapPixelator.cpp  BitmapPixelator.h  ClumsyPacking.cpp  ClumsyPacking.h  ClumsyPackingData.cpp  GameOfLife.h  GameOfLifeAnimation.cpp  GameOfLifeCell.cpp  GameOfLifeCell.h  GameOfLifePlane.cpp  GameOfLifePlane.h  GameOfLifeSprinkler.cpp  GameOfLifeSprinkler.h  GameOfLifeStep.cpp  GameOfLifeTransition.cpp  Topology.h  boydsa.cpp  boydsa.h
src/app/: App.cpp  App.h  Consts.cpp  Consts.h  StepTimer.h  Utility.cpp  Utility.h  blooDot.cpp  blooDot.h  blueDot.cpp  blueDot.h
src/dings/: ObjectBehaviors.cpp  ObjectBehaviors.h  ObjectProperties.cpp  ObjectProperties.h  dings.cpp  dings.h  mobs.h
xassy/: dexassy.cpp  dexassy.h  enxassy.cpp  enxassy.h  enxlate.cpp  enxlate.h
(+201 files in other folders)
